--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -22,6 +22,15 @@ jobs:
       env:
         CG_USERNAME: ${{ secrets.CG_USERNAME }}
         CG_PASSWORD: ${{ secrets.CG_PASSWORD }}
+    - name: upload-artifact
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: upload-screenshots
+        path: screenshots
+    - name: remove-screenshots
+      if: ${{ failure() }}
+      run: rm -rf ./screenshots
 
   ##################################
   ### Run when a schedule failed ###
