--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,9 @@ name: Mocha CI
 on:
   push:
     branches:
-      - master
+      - apps
     paths:
     - "test/**"
-    - ".github/workflows/ci.yml"
 
 jobs:
   build:
@@ -17,14 +16,23 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
-        cache: 'npm'
-    - name: Install Dependencies
-      run: npm install
-    - name: Test
-      run: ([ -z $CG_USERNAME ] || [ -z $CG_PASSWORD ] || npm test)
+        cache: 'yarn'
+    - name: Install Appium
+      uses: FinbertMDS/setup-appium@latest
+      with:
+        appium-version: "1.20.2"
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+    - name: Run Appium Tests
+      uses: reactivecircus/android-emulator-runner@v2
       env:
         CG_USERNAME: ${{ secrets.CG_USERNAME }}
         CG_PASSWORD: ${{ secrets.CG_PASSWORD }}
+      with:
+        api-level: 28
+        target: google_apis
+        emulator-build: 7425822
+        script: "[-z $CG_USERNAME ] || [ -z $CG_PASSWORD ] || (sleep 60 && yarn test)"
     - name: upload-artifact
       if: ${{ failure() }}
       uses: actions/upload-artifact@v2
