--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
     "name": "webdriverio-tests",
     "version": "0.1.0",
     "private": true,
+    "dependencies": {
+      "@wdio/cli": "^7.25.2"
+    },
     "devDependencies": {
-        "@wdio/cli": "^7.25.1",
-        "@wdio/local-runner": "^7.25.1",
-        "@wdio/mocha-framework": "^7.25.1",
-        "@wdio/spec-reporter": "^7.25.1",
-        "chromedriver": "^106.0.1",
-        "geckodriver": "^3.1.0",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.8.4",
-        "wdio-chromedriver-service": "^8.0.0",
-        "wdio-geckodriver-service": "^4.0.0",
-        "wdio-wait-for": "^3.0.0"
+      "@wdio/appium-service": "^7.25.1",
+      "@wdio/mocha-framework": "^7.25.2",
+      "@wdio/local-runner": "^7.25.2",
+      "@wdio/spec-reporter": "^7.25.1",
+      "ts-node": "^10.9.1",
+      "typescript": "^4.8.4"
     },
     "scripts": {
-        "test": "npx wdio run test/wdio.conf.ts"
+        "test": "npx wdio run wdio.conf.js"
     }
 }
