--- a/.github/workflows/daily_apps.yml
+++ b/.github/workflows/daily_apps.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         api-level: 28
         target: google_apis
-        script: "[-z $CG_USERNAME ] || [ -z $CG_PASSWORD ] || (sleep 60 && yarn test)"
+        script: "sleep 60 && yarn test"
     - name: upload-artifact
       if: ${{ failure() }}
       uses: actions/upload-artifact@v2
