--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "typescript": "^4.8.4"
     },
     "scripts": {
+        "list-devices": "avdmanager list device",
         "test": "npx wdio run wdio.conf.js"
     }
 }
