--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,47 @@ on:
   push:
     branches:
       - apps
-    paths:
-    - "test/**"
+    # paths:
+    # - "test/**"
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - name: Enable KVM
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
+    - name: Gradle cache
+      uses: gradle/actions/setup-gradle@v3
+    - name: AVD cache
+      uses: actions/cache@v4
+      id: avd-cache
       with:
-        node-version: 16
+        path: |
+          ~/.android/avd/*
+          ~/.android/adb*
+        key: avd-29
+    - name: create AVD and generate snapshot for caching
+      if: steps.avd-cache.outputs.cache-hit != 'true'
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        force-avd-creation: false
+        emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+        disable-animations: false
+        script: echo "Generated AVD snapshot for caching."
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
         cache: 'yarn'
     - name: Install Appium
       uses: FinbertMDS/setup-appium@latest
-      with:
-        appium-version: "1.20.2"
+    - name: Install UIAutomator
+      run: appium driver install uiautomator2
     - name: Install dependencies
       run: yarn install --frozen-lockfile
     - name: Run Appium Tests
