--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
         api-level: 28
         target: google_apis
         emulator-build: 7425822
+        profile: pixel_7
         script: "[-z $CG_USERNAME ] || [ -z $CG_PASSWORD ] || (yarn list-devices)"
     - name: upload-artifact
       if: ${{ failure() }}
