--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Clone mobile_certs 1
         run: |
-          git clone https://github.com/FinbertMDS/mobile_certs.git
+          git clone git@github.com:FinbertMDS/mobile_certs.git
       
